package de.hbrs.team7.se1_starter_repo.entities

class Kunde(kundennummer: Int, bezahlinformationen: String, kontaktinformationen: String) {

    /**
     *
     * War im Entwurf geplant, konnte aber aus Zeit- und Designgründen nicht umgesetzt werden.
     *
     * @author Alexander Bohl
     */
    var auto_verlaengerung: Boolean = false

}