package de.hbrs.team7.se1_starter_repo.entities

class User {
}