@startuml
skinparam classAttributeIconSize 0
class Parkhaus {
  -name: String
  -nr: Integer
  -Preismultiplikator: integer
  +getFreiePlaetze(): integer
  +setSprache(String)
  #getPreismultiplikator(): float
  +getName(): String
}

class ParkhausEbene {
  -plaetze: integer
  -freiePlaetze: integer
  +Nummer: integer
  +autoFaehrtEin(Auto)
  +getPlaetze(): integer
  +getFreiePlaetze(): integer
}

class User {
}

class ParkhausPersonal {
  -name: String
  -password: String
  +login(String, String)
  +statistikenAbrufen(Parkhaus): JSON
  +statistikenAbrufen(Parkhaus, ParkhausEbene): JSON
  +schrankeOeffnen(ParkhausEbene, integer)
  +schrankeSchließen(ParkhausEbene, integer)
}

class Parkhausbetreiber {
  +preisfaktorAendern(Parkhaus, float)
  +preisfaktorAendern(Parkhaus, Parkhausebene, float)
}

class Ticket {
  -Ticketnummer: String
  -Kennzeichen: String
  -Ausstellungsdatum: DateTime
  -Ausfahrdatum: DateTime
  -Preisklasse: integer
  +getTicketnummer(): String
  +getKennzeichen(): String
  +getAusstellungsdatum(): DateTime
  +getAusfahrdatum(): DateTime
  +setAusfahrdatum(DateTime)
  +getPreisklasse(): integer
  +bezahlen(float)
}

class DauerTicket {
  -Ablaufdatum: DateTime
  -Kundennummer: integer
  +getAblaufdatum(): DateTime
  +getKundennummer(): String
}

class Kunde {
  -Kundennummer: integer
  -Bezahlinformationen: String
  -Auto-Verlaengerung: boolean
  -Kontaktinformationen: String
  +ticketVerlaengern(Dauerticket)
  +getKundennummer(): String
  +getBezahlinformationen(): String
  +getAuto-Verlaengerung(): boolean
  +setAuto-Verlaengerung(boolean)
  +getKontaktinformationen(): String
}


User - Parkhaus : parkt_in >
Ticket <.. DauerTicket: <<extends>>
ParkhausEbene "1..*" -- "1..1"Parkhaus
User <.. Kunde: <<extends>>
Kunde "1..1" -- "0..*"DauerTicket
ParkhausPersonal <.. Parkhausbetreiber: <<extends>>
ParkhausPersonal -- Parkhaus: beaufsichtigt >

@enduml